/*
 * Copyright 2020 Square Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package squareup.proto3.java.alltypes;

import "google/protobuf/empty.proto";

message AllEmpty {
  google.protobuf.Empty empty = 1;

  repeated google.protobuf.Empty rep_empty = 201;

  oneof choice {
    google.protobuf.Empty oneof_empty = 402;
  }

  map<int32, google.protobuf.Empty> map_int32_empty = 501;
}
