/*
 * Copyright 2020 Square Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package squareup.proto3.kotlin.extensions;

import "wire/extensions.proto";

option (wire.wire_package) = "squareup.proto3.wire.extensions";

message WireMessage {
  enum WireEnum {
    UNKNOWN = 0 [(wire.constant_until) = "3.2.0"];
    A = 1 [(wire.constant_since) = "3.2.0"];
  }

  int32 opt_int32 = 1 [(wire.until) = "3.2.0"];
  string opt_string = 2 [(wire.since) = "3.2.0"];
}
